--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
+        android:visibility="gone"
         android:text="Presensi Mahasiswa"
         android:textColor="@color/dark_red"
         android:textSize="30sp"
@@ -39,20 +40,21 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/loginLayout"
-        android:elevation="5dp"
-        app:cardUseCompatPadding="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="15dp"
         android:backgroundTint="@color/white"
+        android:elevation="5dp"
         android:focusableInTouchMode="true"
         android:orientation="vertical"
         app:cardCornerRadius="20dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,8 +67,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
-                android:text="Login"
                 android:paddingBottom="20dp"
+                android:text="Login"
                 android:textColor="@color/dark_red"
                 android:textSize="30sp"
                 android:textStyle="bold" />
@@ -88,8 +90,8 @@
                 app:errorEnabled="true"
                 app:errorIconDrawable="@null"
                 app:hintEnabled="false"
-                app:startIconMinSize="55dp"
-                app:hintTextColor="@color/white_grey">
+                app:hintTextColor="@color/white_grey"
+                app:startIconMinSize="55dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/loginEmail"
@@ -118,9 +120,9 @@
                 app:errorEnabled="true"
                 app:errorIconDrawable="@null"
                 app:hintEnabled="false"
-                app:startIconMinSize="55dp"
+                app:hintTextColor="@color/white_grey"
                 app:passwordToggleEnabled="true"
-                app:hintTextColor="@color/white_grey">
+                app:startIconMinSize="55dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/loginPassword"
